ISSD-1449 add new product/account fields to applicensekey
